fix loading visibility issuses

--- a/src/Sk.css
+++ b/src/Sk.css
@@ -364,7 +364,7 @@ p.team-founder {
 	font-style: italic;
 }
 .viz-container .col-lg-7 {
-	margin-bottom: 0.5rem;
+	margin-bottom: 1.5rem;
 	margin-left: 1rem;
 }
 .viz-container .col-lg-7 .wrapper {
